--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_card"
 
-    app:cardCornerRadius="14dp"
+    app:cardCornerRadius="11dp"
 
 
     android:layout_marginTop="8dp"
@@ -31,8 +31,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:paddingTop="4dp"
                 android:paddingStart="10dp"
+                android:paddingEnd="2dp"
+                android:fontFamily="@font/acme"
+                android:maxLines="1"
+
                 android:text="@string/my_first_page_of_diary_looks_awesome"
                 android:textColor="#090808"
                 android:textSize="18sp" />
@@ -41,11 +45,12 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top|right"
+                android:layout_gravity="right|end"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="3dp"
+                android:paddingTop="4dp"
                 android:fontFamily="sans-serif-black"
-                android:text="date"
+                android:text="25 July"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
