--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -48,6 +48,7 @@
                 android:layout_gravity="right|end"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="3dp"
+
                 android:paddingTop="4dp"
                 android:fontFamily="sans-serif-black"
                 android:text="25 July"
@@ -61,14 +62,16 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
             android:ellipsize="end"
-            android:id="@+id/content"
-            android:padding="8dp"
+            android:fontFamily="@font/caveat"
             android:maxLines="3"
-            android:text="@string/contenttext"/>
+            android:padding="8dp"
+            android:text="@string/contenttext"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
