--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,18 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
+        app:liftOnScroll="true"
+
+        android:layout_height="128dp">
+
+
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topAppBar"
             android:layout_width="match_parent"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+
             android:layout_height="?attr/actionBarSize"
             app:title="Dear Diary..."
             app:menu="@menu/top_app_bar"
