--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-
+        android:elevation="0dp"
         app:liftOnScroll="true"
         android:fitsSystemWindows="true"
         android:layout_height="152dp">
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:title="Dear Diary..."
+
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:contentScrim="?attr/colorPrimary"
             app:statusBarScrim="?attr/colorPrimaryVariant"
@@ -45,6 +46,7 @@
             android:layout_height="?attr/actionBarSize"
             app:title="Dear Diary..."
             app:menu="@menu/top_app_bar"
+            android:elevation="0dp"
             app:navigationIcon="@drawable/ic_baseline_menu_24"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             />
