--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/caveat"
+            android:fontFamily="@font/andika"
             android:maxLines="3"
             android:padding="8dp"
             android:text="@string/contenttext"
