--- a/app/src/main/res/layout/activity_new_page.xml
+++ b/app/src/main/res/layout/activity_new_page.xml
@@ -6,37 +6,60 @@
 
     android:layout_height="match_parent">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="50dp"
+        android:id="@+id/dateText"
+        android:layout_marginEnd="5dp"
+        android:background="@null"
+        android:fontFamily="sans-serif-light"
+
+
+        android:hint="Date"
+        android:inputType="textAutoComplete"
+        android:text="12/08/2021"
+        android:textSize="24sp" />
+
     <EditText
         android:id="@+id/edit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="@dimen/min_height"
-        android:paddingTop="?android:attr/actionBarSize"
+        android:layout_marginBottom="5dp"
         android:fontFamily="sans-serif-light"
         android:hint="Title"
+        android:background="@null"
+        android:layout_marginEnd="5dp"
         android:inputType="textAutoComplete"
-        android:layout_margin="10dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="11dp"
         android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edit_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="500dp"
-        android:gravity="top"
+        android:minHeight="430dp"
+        android:maxHeight="430dp"
+        android:background="@null"
 
+        android:gravity="top"
+        android:layout_marginEnd="5dp"
         android:fontFamily="sans-serif-light"
         android:hint="Write out your mind here..."
         android:inputType="textMultiLine"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textSize="18sp" />
+        android:layout_marginLeft="11dp"
+        android:layout_margin="10dp"
+        android:textSize="17sp" />
 
     <Button
         android:id="@+id/button_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:paddingBottom="5dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_save"
         android:layout_margin="@dimen/big_padding"
