--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -10,8 +10,8 @@
 
     android:layout_marginTop="8dp"
 
-
-    android:layout_height="100dp">
+android:minHeight="100dp"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,35 +24,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:paddingTop="4dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="2dp"
-                android:fontFamily="@font/acme"
                 android:maxLines="1"
+                android:paddingStart="10dp"
+                android:paddingTop="2dp"
+
+                android:paddingEnd="2dp"
 
                 android:text="@string/my_first_page_of_diary_looks_awesome"
                 android:textColor="#090808"
-                android:textSize="18sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|end"
-                android:layout_marginLeft="5dp"
+                android:layout_gravity="left|start"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="3dp"
 
-                android:paddingTop="4dp"
+                android:paddingTop="3dp"
                 android:fontFamily="sans-serif-black"
                 android:text="25 July"
-                android:textSize="15sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
 
@@ -70,7 +71,7 @@
             android:maxLines="2"
             android:padding="8dp"
             android:text="@string/contenttext"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
 
